# illuzion

./: CMakeLists.txt
code/: effect.cpp  illuzion.hpp  main.cpp  picture.cpp
